# ty_cli

./: .gitignore  README.md  README.rst  azure-pipelines.yml  devel.md  setup.cfg  setup.py  tox.ini
docs/: conf.py  development.rst  index.rst
examples/: 01_basic.py  02_basic_asterisk.py  03_optional.py  03_optional_kw.py  04_default.py  05_multi.py  06_single_lots.py  99_normal_call.py  README.md
src/ty_cli/: __init__.py
tests/: test_basic.py  test_kw.py  test_kw_only.py  test_optional_and_default.py
ty_cli/: __init__.py
