[metadata]
license_file = LICENSE


[bdist_wheel]
universal = true

#[options]
#package_dir=
#    =src
#packages=find:
#
#[options.packages.find]
#where=src

[tool:pytest]
testpaths = tests

[coverage:run]
source =
    ty_cli
    tests

[coverage:paths]
source =
    src/ty_cli
    .tox/*/lib/python*/site-packages/ty_cli
    .tox/*/site-packages/ty-cli

[mypy]
warn_unused_configs = True
disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
